src/main/java/cn/sowjz/souwen/v1/req_parser/RequestParser.java
/* Generated By:JavaCC: Do not edit this line. RequestParser.java */
package cn.sowjz.souwen.v1.req_parser;

import java.io.StringReader;
import java.util.*;
import cn.sowjz.souwen.v1.query.request.SubCrit;

public class RequestParser implements RequestParserConstants {


    static public enum SumType { none,count,estimate }
     static public enum SortType { time,rela,random,COPIES,time_asc,field_desc,field_asc,heat }
     static public enum CmdType { SEARCH,GROUP,DISTINCT,CUBE,KEYWORDS,WORDCLOUD,WAM,CLUSTER,UNITED }
     static public enum OpType { INDEX,GREATTHAN,LESSTHAN,EQUAL,UNEQUAL,GREATEQUAL,LESSEQUAL,BETWEEN,IN,COMPARE,NOTIN,SEARCH,BITAND,MASK_EQUAL }
     static public enum SubRunType { AND,ANDNOT,OR,ORNOT }


        public static void main(String [] args) throws Exception {
                String sql="SEARCH [0,1000] orderby=time sum= count WHERE TI : '((\u5a11\u5825\u69fb|\u5a11\u5825\u69fb\u675e\ue6e2\u5a11\u5825\u69fb\u935b\u69ba\u5a11\u5825\u69fb\u95c3\u7132\u5a11\u5825\u69fb\u95c3\u71b7\u61b3|119|\u940f\ue0a4\u4f28|\u940f\ue0a2\u5a0d|\u74a7\u98ce\u4f00|\u942b\ufffd\u940f\u73c5\u6fb6\u8fa9\u4f00\u9416\u55d9\u5667|\u9415\u51aa\u578e|\u95c2\ue046\u578e)+(\u9357\u693e\u542b|\u941c\u52ec\ue11f|\u7ec9\ufe3d\u6a0a|\u5be4\u6d2a\u5064))' AND PU between 1644163200,1644249600 AND RE == 0";
                RequestParser t=new RequestParser(new StringReader(sql));

                t.fillTo(new RequestBuilder.Simple());
        }


        private String removeQuote(String tx) {
                        if(tx==null) return tx;
                        int len=tx.length();

                        if(tx.length()>=2&& tx.charAt(0)=='\u005c''&& tx.charAt(len-1)=='\u005c'')
                        {
                            StringBuffer strb=new StringBuffer();
                            char last=0;
                                for(int i=1;i<len-1;i++) {
                                        char c=tx.charAt(i);
                                        if(last!='\u005c'' || c!='\u005c'')
                                           strb.append(c);
                                    last=c;
                                }
                                return strb.toString();
                        }
                        return tx;
    }

  final public void fillTo(RequestBuilder tb) throws ParseException {
         Token t0;
 SubCrit subt;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEARCH:
    case DISTINCT:
    case GROUP:
    case CUBE:
    case KEYWORDS:
    case WORDCLOUD:
    case WAM:
    case CLUSTER:
      queryCluse(tb);
      break;
    case UNITED:
      jj_consume_token(UNITED);
      tb.queryCmd(CmdType.UNITED);
      jj_consume_token(LPAREN);
      queryCluse(tb);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        jj_consume_token(COMMA);
        queryCluse(tb);
      }
      jj_consume_token(RPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FROM:
        jj_consume_token(FROM);
        t0 = jj_consume_token(TABLE_NAME);
    tb.table_name(t0.image);
        break;
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(WHERE);
    tb.createRequest();
    subt = whereClause(tb);
    jj_consume_token(0);
     tb.where(subt);
  }

  final public void fillOnlyWhereTo(RequestBuilder tb) throws ParseException {
  SubCrit subt;
  tb.createRequest();
    subt = whereClause(tb);
    jj_consume_token(0);
   tb.where(subt);
  }

  final public void queryCluse(RequestBuilder tb) throws ParseException {
  Token t0;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEARCH:
      jj_consume_token(SEARCH);
      tb.queryCmd(CmdType.SEARCH);
      ask_order_sum(tb);
      break;
    case DISTINCT:
      jj_consume_token(DISTINCT);
          tb.queryCmd(CmdType.DISTINCT);
      ask_order_sum(tb);
      params(tb);
      break;
    case GROUP:
      jj_consume_token(GROUP);
     tb.queryCmd(CmdType.GROUP);
      jj_consume_token(asknum);
      jj_consume_token(EQ);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMBER:
        t0 = jj_consume_token(NUMBER);
                tb.askNum(t0.image);
        break;
      case ALL:
        jj_consume_token(ALL);
                {tb.askNum("0");}
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      params(tb);
      break;
    case CUBE:
      jj_consume_token(CUBE);
       tb.queryCmd(CmdType.CUBE);
      jj_consume_token(asknum);
      jj_consume_token(EQ);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMBER:
        t0 = jj_consume_token(NUMBER);
                tb.askNum(t0.image);
        break;
      case ALL:
        jj_consume_token(ALL);
                {tb.askNum("0");}
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(CONCAT_OP);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMBER:
        t0 = jj_consume_token(NUMBER);
                tb.cube2f_max(t0.image);
        break;
      case ALL:
        jj_consume_token(ALL);
                {tb.cube2f_max("0");}
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      params_cube(tb);
      break;
    case KEYWORDS:
      jj_consume_token(KEYWORDS);
          tb.queryCmd(CmdType.KEYWORDS);
      ask_order_sum(tb);
      params(tb);
      break;
    case WORDCLOUD:
    case WAM:
    case CLUSTER:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WORDCLOUD:
        jj_consume_token(WORDCLOUD);
          tb.queryCmd(CmdType.WORDCLOUD);
        break;
      case WAM:
        jj_consume_token(WAM);
        tb.queryCmd(CmdType.WAM);
        break;
      case CLUSTER:
        jj_consume_token(CLUSTER);
        tb.queryCmd(CmdType.CLUSTER);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      ask_order_sum(tb);
      params_mining(tb);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FROM:
      jj_consume_token(FROM);
      t0 = jj_consume_token(TABLE_NAME);
    tb.table_name(t0.image);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
  }

  final public void params_mining(RequestBuilder tb) throws ParseException {
    Token t0;
    List< String> list=new ArrayList< String>();
    jj_consume_token(params);
    jj_consume_token(EQ);
    jj_consume_token(LSBRACE);
    t0 = field_name();
         tb.target(t0.image);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUMBER:
        t0 = jj_consume_token(NUMBER);
         list.add(t0.image);
        break;
      case FLOAT:
        t0 = jj_consume_token(FLOAT);
         list.add(t0.image);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(RSBRACE);
      tb.miningParams(list);
  }

  final public Token number() throws ParseException {
   Token t0;
    t0 = jj_consume_token(NUMBER);
      {if (true) return t0;}
    throw new Error("Missing return statement in function");
  }

  final public void params_cube(RequestBuilder tb) throws ParseException {
    Token t0;
    List< String> sumlist=new ArrayList< String>();
    jj_consume_token(params);
    jj_consume_token(EQ);
    jj_consume_token(LSBRACE);
    t0 = field_name();
         tb.target(t0.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      jj_consume_token(LPAREN);
      t0 = jj_consume_token(NUMBER);
                tb.groupBegin(t0.image);
      jj_consume_token(COMMA);
      t0 = jj_consume_token(NUMBER);
                tb.groupStep(t0.image);
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(COMMA);
    t0 = field_name();
         tb.cube2fn(t0.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      jj_consume_token(SUM);
      jj_consume_token(LPAREN);
      t0 = field_name();
      sumlist.add(t0.image.toUpperCase());
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_3;
        }
        jj_consume_token(COMMA);
        t0 = field_name();
           sumlist.add(t0.image.toUpperCase());
      }
      jj_consume_token(RPAREN);
        tb.fieldSum(sumlist);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(RSBRACE);
  }

  final public void params(RequestBuilder tb) throws ParseException {
    Token t0;
    List< String> sumlist=new ArrayList< String>();
    jj_consume_token(params);
    jj_consume_token(EQ);
    jj_consume_token(LSBRACE);
    t0 = field_name();
         tb.target(t0.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      jj_consume_token(LPAREN);
      t0 = jj_consume_token(NUMBER);
                tb.groupBegin(t0.image);
      jj_consume_token(COMMA);
      t0 = jj_consume_token(NUMBER);
                tb.groupStep(t0.image);
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      jj_consume_token(SUM);
      jj_consume_token(LPAREN);
      t0 = field_name();
      sumlist.add(t0.image);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        t0 = field_name();
           sumlist.add(t0.image);
      }
      jj_consume_token(RPAREN);
        tb.fieldSum(sumlist);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    jj_consume_token(RSBRACE);
  }

  final public Token field_name() throws ParseException {
   Token t0;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FIELD:
      t0 = jj_consume_token(FIELD);
      break;
    case OR:
      t0 = jj_consume_token(OR);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
      {if (true) return t0;}
    throw new Error("Missing return statement in function");
  }

  final public void ask_order_sum(RequestBuilder tb) throws ParseException {
    Token t0;
     Token t1;
    jj_consume_token(LSBRACE);
    t0 = jj_consume_token(NUMBER);
     tb.askBegin(t0.image);
    jj_consume_token(COMMA);
    t0 = jj_consume_token(NUMBER);
          tb.askNum(t0.image);
    jj_consume_token(RSBRACE);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ORDERBY:
      case SUM:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ORDERBY:
        jj_consume_token(ORDERBY);
        jj_consume_token(EQ);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case TIME:
          jj_consume_token(TIME);
     tb.orderBy(SortType.time);
          break;
        case rela:
          jj_consume_token(rela);
 tb.orderBy(SortType.rela);
          break;
        case random:
          jj_consume_token(random);
 tb.orderBy(SortType.random);
          break;
        case COPIES:
          jj_consume_token(COPIES);
 tb.orderBy(SortType.COPIES);
          break;
        case time_asc:
          jj_consume_token(time_asc);
 tb.orderBy(SortType.time_asc);
          break;
        case field_desc:
          jj_consume_token(field_desc);
          jj_consume_token(LPAREN);
          t0 = jj_consume_token(QUOTED);
          jj_consume_token(RPAREN);
 tb.orderBy(SortType.field_desc,removeQuote(t0.image));
          break;
        case field_asc:
          jj_consume_token(field_asc);
          jj_consume_token(LPAREN);
          t0 = jj_consume_token(QUOTED);
          jj_consume_token(RPAREN);
 tb.orderBy(SortType.field_asc,removeQuote(t0.image));
          break;
        case heat:
          jj_consume_token(heat);
          jj_consume_token(LPAREN);
          t0 = jj_consume_token(QUOTED);
          jj_consume_token(RPAREN);
 tb.orderBy(SortType.heat,removeQuote(t0.image));
          break;
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case SUM:
        jj_consume_token(SUM);
        jj_consume_token(EQ);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case none:
          t0 = jj_consume_token(none);
    tb.sum(SumType.none);
          break;
        case COUNT:
          t0 = jj_consume_token(COUNT);
 tb.sum(SumType.count);
          break;
        case estimate:
          t0 = jj_consume_token(estimate);
 tb.sum(SumType.estimate);
          break;
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public SubCrit whereClause(RequestBuilder tb) throws ParseException {
    SubCrit subt1;
    SubCrit subt2;
    subt1 = expression(tb);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_6;
      }
      if (jj_2_1(2)) {
        jj_consume_token(OR);
        subt2 = expression(tb);
          subt1=subt1.or(subt2);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case OR:
          jj_consume_token(OR);
          jj_consume_token(NOT);
          subt2 = expression(tb);
          subt1=subt1.orNot(subt2);
          break;
        default:
          jj_la1[23] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
       {if (true) return subt1;}
    throw new Error("Missing return statement in function");
  }

  final public SubCrit expression(RequestBuilder tb) throws ParseException {
    SubCrit subt1;
    SubCrit subt2;
    subt1 = primary(tb);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[24] = jj_gen;
        break label_7;
      }
      if (jj_2_2(2)) {
        jj_consume_token(AND);
        jj_consume_token(NOT);
        subt2 = primary(tb);
           subt1=subt1.andNot(subt2);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          jj_consume_token(AND);
          subt2 = primary(tb);
       subt1=subt1.mergeAnd(subt2);
          break;
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
       {if (true) return subt1;}
    throw new Error("Missing return statement in function");
  }

  final public SubCrit primary(RequestBuilder tb) throws ParseException {
  Token t;
  SubCrit subt;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
    case host_sn:
    case FIELD:
      subt = one_field(tb);
 {if (true) return subt;}
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      subt = whereClause(tb);
      jj_consume_token(RPAREN);
 {if (true) return subt;}
      break;
    default:
      jj_la1[26] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public SubCrit one_field(RequestBuilder tb) throws ParseException {
  Token t=null;
  Token t2=null;
   Token t3=null;
  OpType op=null;
  List< String> list=new ArrayList< String>();
  String value;
  String field_name;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FIELD:
      t = jj_consume_token(FIELD);
                    field_name=t.image;
      break;
    case OR:
      t = jj_consume_token(OR);
                   field_name=t.image;
      break;
    case host_sn:
      t = jj_consume_token(host_sn);
                        field_name="00";
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
    case EQ2:
    case NE:
    case NE2:
    case LT:
    case LE:
    case GT:
    case GE:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        jj_consume_token(EQ);
              op=OpType.EQUAL;
        break;
      case EQ2:
        jj_consume_token(EQ2);
                op=OpType.EQUAL;
        break;
      case NE:
        jj_consume_token(NE);
               op=OpType.UNEQUAL;
        break;
      case NE2:
        jj_consume_token(NE2);
                op=OpType.UNEQUAL;
        break;
      case LT:
        jj_consume_token(LT);
